# e3_gnn_xanes

./: .gitattributes  .gitignore  README.md  check_equivariance.py  check_scale.py  pyproject.toml  requirements.txt  verify_model.py
configs/: config.yaml  default.yaml
processed/: data_rmax5.0_e150.pt
src/: __init__.py  config.py  eval_validation.py  inference.py  loss.py  train.py  visualization.py
src/data/: __init__.py  assemble_dataset.py  dataset.py  preprocess.py  transforms.py  utils.py
src/model/: __init__.py  basis.py  gnn.py  layers.py  pooling.py
tests/: check_equivariance.py  check_spectra_scale.py  conftest.py  test_basis.py  test_data.py  test_model.py  verify_model.py
